# ds-toolkit

./: .gitattributes  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: example.ipynb  sample_scoring_dataset.csv  version_libs.ipynb
src/ds_toolkit/: __init__.py
src/ds_toolkit/data/: __init__.py  dataset.py  splitter.py
src/ds_toolkit/feature_selection/: __init__.py  base.py  vif.py
tests/: test_smoke.py
