[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-toolkit"
dynamic = ["version"]
description = "A personal suite of tools for data analytics, scoring modeling, and model validation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Александр", email = "tabbols95@gmail.com" }]
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/TheDrunkenBear/ds-toolkit"
Changelog = "https://github.com/TheDrunkenBear/ds-toolkit/blob/master/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "ds_toolkit.__version__" }

[tool.ruff]
line-length = 88
src = ["src", "tests"]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
# Ruff's default rule set (pyflakes + a curated pycodestyle subset).
# Stricter rules (I, W, UP, B) are enabled in a later change.
select = ["E4", "E7", "E9", "F"]
